@startuml
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 60
skinparam ranksep 40

' Task 1 - User Highlights (Stars & Trending)
' Generated on: 2026-03-15 21:11:45
' Scope: Star/favourite and trending classes
' Generated by: generate_uml.py

package "org.apache.roller.weblogger.business" <<business>> {
  interface StarManager {
  }

}

package "org.apache.roller.weblogger.business.jpa" <<jpa>> {
  class JPAStarManagerImpl {
    -strategy : JPAPersistenceStrategy
    +saveWeblogStar(UserWeblogStar star) : void
    +removeWeblogStar(UserWeblogStar star) : void
    +saveEntryStar(UserEntryStar star) : void
    +removeEntryStar(UserEntryStar star) : void
    +release() : void
  }

}

package "org.apache.roller.weblogger.pojos" <<pojos>> {
  class UserEntryStar {
    -id : String
    -user : User
    -entry : WeblogEntry
    -starredTime : Timestamp
  }

  class UserWeblogStar {
    -id : String
    -user : User
    -weblog : Weblog
    -starredTime : Timestamp
  }

}

package "org.apache.roller.weblogger.ui.struts2.core" <<core>> {
  class StarEntryAction {
    -entryId : String
    -entryPermalink : String
    +star() : String
    +unstar() : String
  }

  class StarWeblogAction {
    -weblogId : String
    -weblogHandle : String
    +star() : String
    +unstar() : String
  }

  class StarredEntriesAction {
    -pager : StarredEntriesPager
    -page : int
    +execute() : String
  }

  class StarredWeblogsAction {
    -starredWeblogs : List<UserWeblogStar>
    +execute() : String
  }

  class TrendingAction {
    -trendingWeblogs : List<Object[]>
    -trendingEntries : List<Object[]>
    +execute() : String
  }

}

package "org.apache.roller.weblogger.ui.struts2.pagers" <<pagers>> {
  class StarredEntriesPager {
    -items : List<UserEntryStar>
    -baseUrl : String
    -pageNum : int
    -moreItems : boolean
  }

}

' Relationships
StarredWeblogsAction --> UserWeblogStar : starredWeblogs
StarredEntriesAction --> StarredEntriesPager : pager
StarredEntriesPager --> UserEntryStar : items
StarManager <|.. JPAStarManagerImpl

@enduml